--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BinaryOverload</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.11.4/css/jquery.terminal.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/main-dist.css">
+
 </head>
 
 <body>
-    <h1>BinaryOverload</h1>
-    <h3>Full-time student, programmer and tech enthusiast. Currently working on <a href="https://github.com/FlareBot/FlareBot">FlareBot</a></h3>
-    <br>
-    Type "help" to see all the commands you can do!
-    
+
+    <div id="terminal"></div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.11.4/js/jquery.terminal.min.js"></script>
