--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.11.4/js/jquery.terminal.min.js"></script>
-    <script src="js/unix_formatting-dist.js"></script>
+    <!-- <script src="js/unix_formatting-dist.js"></script> -->
     <script src="js/main-dist.js"></script>
 </body>
 
