Add passworded commands and jokes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.11.4/js/jquery.terminal.min.js"></script>
     <!-- <script src="js/unix_formatting-dist.js"></script> -->
+    <script src="js/md5.min.js"></script>
     <script src="js/main-dist.js"></script>
 </body>
 
